--- a/src/_i_base.scss
+++ b/src/_i_base.scss
@@ -1,13 +1,10 @@
 /*
-* Fichier de style de base. Constitut aussi le theme de base
-____________________________________________________________*/
-
-//* importation des déclarations des propriétés à utilisées
-//----------------------------------------------------------*/
+ * Base stylesheet's. It's also the basic theme.
+_____________________________________________________*/
 
 
-/* début de la déclaration de style sur des éléments "conteneurs" tels les sections, les articles, ...
------------------------------------------------------------------------------------------------------*/
+/* Style on "containers" elements like sections, articles, ...
+--------------------------------------------------------------*/
 
 body {
 
@@ -30,12 +27,64 @@ body {
 }
 
 
-/* fin de la déclaration de style sur les conteneurs
--------------------------------------------------------*/
+table {
+
+    border-collapse: collapse ;
+    border-spacing: 0 ;
+    empty-cells: show ;
+    text-align: center ;
+    background: $default-bg-color ;
+
+    td, th {
+
+        padding: 0.5em ;
+        border: 1px solid lighten( $dark-color, 50%) ;
+    }
+
+    th {
+
+        background-color: $dark-color ;
+        color: $white-color ;
+        font-family: $item-font-family ;
+        font-size: 0.95em ;
+    }
+}
 
 
-/* début de la déclaration de style sur des éléments speciaux tels les bouttons, les zones de texte, ... 
-------------------------------------------------------------------------------------------------------*/
+/* Style on "specials and operatings" elements like buttons, textfields, ... 
+----------------------------------------------------------------------------*/
+
+a {
+    
+    text-decoration: none ;
+    color: lighten( $black-color, 30%) ;
+    font-family: $item-font-family ;
+    padding: 1px 2px ;
+    
+    &:hover, &:visited {
+        
+        color: $hover-color ;
+    }
+    &:hover {
+        
+        text-decoration: underline ;
+    }
+    
+    @at-root {
+        
+        a.i-btn, a i-btn, a button {
+            
+            &:hover {
+                
+                text-decoration: none ;
+            }
+            &:visited {
+
+                color: $white-color ;
+            }
+        }
+    }
+}
 
 .i-btn{
 
@@ -43,14 +92,16 @@ body {
     
            display: inline-block ;
        line-height: normal ;
-       white-space: nowrap ;
+       white-space: nowrap ;    
+          position: relative ;
+
     vertical-align: middle ;
            padding: 5px 10px ;
             margin: 3px ;
             border: 2px solid $white-color ;
      border-radius: 10px ;
         box-shadow: 0px 1px 2px $shadow-color ;
-       font-family: Ubuntu, _Ubuntu, $default-font-family ;
+       font-family: $item-font-family ;
          font-size: 0.90em;
         text-align: center ;
     text-decoration: none ;
@@ -75,6 +126,11 @@ body {
         @include button-bg-look($disable-color, $white-color) ;
         cursor: not-allowed ;
         box-shadow: 0px 1px 1px $disable-color ;
+    }
+    
+    & a {
+        
+        @extend a.i-btn ;
     }
 }
 
@@ -186,21 +242,19 @@ input[ type="color"] {
     }
 }
 
+//@TODO resolve the issue of "no custom checkbox is perform" on firefox, opera, ... 
 
-label input[ type="checkbox"],
-label input[ type="radio"],
 input[ type="checkbox"],
-input[ type="radio"], {
+input[ type="radio"] {
     
     //width: 0px;
     //height: 0px;
-    position: relative ;
     margin-left: 0.8em ;
     margin-right: 0.8em ;
     cursor: auto ;
 
-    /* Aspect des checkboxes */
-    /* :before sert à créer la case à cocher */
+    //checkboxes design
+    //:before is use here to create the custom checkbox
     &:before {
 
         content: '';
@@ -212,7 +266,7 @@ input[ type="radio"], {
         border-radius: 2px; /* angles arrondis */
         box-shadow: 0px 0px 2px $shadow-color ;
     }
-    /* Aspect général de la coche */
+    //general design of the check
     &:after {
 
         content: '✔';
@@ -257,20 +311,9 @@ input[ type="radio"], {
             border-radius: 50% ;
         }
         
-        label {
-
-            cursor: pointer ;
-
-            &:hover {
-
-                color: $hover-color ;
-            }
-        }
-
-        /* Aspect si "cochée" */
         &:checked:after {
 
-            visibility: visible ; /* coche opaque */
+            visibility: visible ;
         }
 
         &:checked:before {
@@ -280,6 +323,18 @@ input[ type="radio"], {
     }
 }
 
+
+label {
+
+    cursor: pointer ;
+
+    &:hover {
+
+        color: $hover-color ;
+    }
+}
+
+
 fieldset {
     
     margin: 1em ;
@@ -288,7 +343,7 @@ fieldset {
     legend {
         
         font-size: 0.85em ;
-        font-family: Ubuntu, _Ubuntu, $default-font-family ;
+        font-family: $item-font-family ;
     }
     
     &:hover {
@@ -299,30 +354,5 @@ fieldset {
 
             color: $hover-color ;
         }
-    }
-}
-
-
-
-table {
-    
-    border-collapse: collapse ;
-    border-spacing: 0 ;
-    empty-cells: show ;
-    text-align: center ;
-    background: $white-color ;
-    
-    td, th {
-
-        padding: 0.5em ;
-        border: 1px solid lighten( $dark-color, 50%) ;
-    }
-
-    th {
-
-        background-color: $dark-color ;
-        color: $white-color ;
-        font-family: Ubuntu, _Ubuntu, $default-font-family ;
-        font-size: 0.95em ;
     }
 }
