--- a/src/iui.scss
+++ b/src/iui.scss
@@ -1,4 +1,4 @@
 @import 'i_skins/default.scss' ;
 @import 'i_font_def.scss' ;
 @import 'i_base.scss' ;
-//@import 'i_themes/default.scss' ;
+@import 'i_themes/default.scss' ;
